WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53731
REGRESSION: Artifacts on box-shadow corners in some cases
https://bugs.webkit.org/show_bug.cgi?id=53731
Summary
REGRESSION: Artifacts on box-shadow corners in some cases
Simon Fraser (smfr)
Reported
2011-02-03 16:18:29 PST
Created
attachment 81135
[details]
Testcase The attached testcase shows some artifacts on the corners.
Attachments
Testcase
(873 bytes, text/html)
2011-02-03 16:18 PST
,
Simon Fraser (smfr)
no flags
Details
Patch
(24.62 KB, patch)
2011-02-03 20:25 PST
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2011-02-03 20:25:35 PST
Created
attachment 81180
[details]
Patch
mitz
Comment 2
2011-02-03 21:22:03 PST
Comment on
attachment 81180
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=81180&action=review
> LayoutTests/ChangeLog:14 > + * platform/mac/fast/box-shadow/shadow-tiling-artifact-expected.checksum: Added. > + * platform/mac/fast/box-shadow/shadow-tiling-artifact-expected.png: Added. > + * platform/mac/fast/box-shadow/shadow-tiling-artifact-expected.txt: Added.
What’s Mac-specific about these results?
Simon Fraser (smfr)
Comment 3
2011-02-03 21:24:33 PST
(In reply to
comment #2
)
> (From update of
attachment 81180
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=81180&action=review
> > > LayoutTests/ChangeLog:14 > > + * platform/mac/fast/box-shadow/shadow-tiling-artifact-expected.checksum: Added. > > + * platform/mac/fast/box-shadow/shadow-tiling-artifact-expected.png: Added. > > + * platform/mac/fast/box-shadow/shadow-tiling-artifact-expected.txt: Added. > > What’s Mac-specific about these results?
We only use ShadowBlur on CG platforms currently.
Simon Fraser (smfr)
Comment 4
2011-02-03 21:28:52 PST
http://trac.webkit.org/changeset/77601
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug